RESOLVED FIXED123217
Clock should not be ref-counted.
https://bugs.webkit.org/show_bug.cgi?id=123217
Summary Clock should not be ref-counted.
Andreas Kling
Reported 2013-10-23 13:43:11 PDT
WebCore::Clock is only ever owned by MediaController.
Attachments
Patch (5.81 KB, patch)
2013-10-23 13:44 PDT, Andreas Kling
no flags
Andreas Kling
Comment 1 2013-10-23 13:44:28 PDT
WebKit Commit Bot
Comment 2 2013-10-23 15:10:19 PDT
Comment on attachment 214990 [details] Patch Clearing flags on attachment: 214990 Committed r157890: <http://trac.webkit.org/changeset/157890>
WebKit Commit Bot
Comment 3 2013-10-23 15:10:22 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.