Clock should not be ref-counted. <https://webkit.org/b/123217>

The Clock object is only ever owned by the MediaController,
so remove the ref counting and store it in a std::unique_ptr.

Also slapped the Clock subclasses with FINAL and OVERRIDE.

Reviewed by Anders Carlsson.


Canonical link: https://commits.webkit.org/141333@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@157890 268f45cc-cd09-0410-ab3c-d52691b4dbfc