Source/WebCore/html/MediaController.h
@@ -149,7 +149,7 @@ private:
     mutable Timer<MediaController> m_clearPositionTimer;
     String m_mediaGroup;
     bool m_closedCaptionsVisible;
-    PassRefPtr<Clock> m_clock;
+    std::unique_ptr<Clock> m_clock;
     ScriptExecutionContext* m_scriptExecutionContext;
     Timer<MediaController> m_timeupdateTimer;
     double m_previousTimeupdateTime;
