Source/WebCore/platform/mac/PlatformClockCA.h
@@ -34,21 +34,21 @@ typedef struct OpaqueCAClock *CAClockRef;
 
 namespace WebCore {
 
-class PlatformClockCA : public Clock {
+class PlatformClockCA FINAL : public Clock {
 public:
     PlatformClockCA();
     virtual ~PlatformClockCA();
 
 private:
-    virtual void setCurrentTime(double);
-    virtual double currentTime() const;
+    virtual void setCurrentTime(double) OVERRIDE;
+    virtual double currentTime() const OVERRIDE;
 
-    virtual void setPlayRate(double);
-    virtual double playRate() const;
+    virtual void setPlayRate(double) OVERRIDE;
+    virtual double playRate() const OVERRIDE;
 
-    virtual void start();
-    virtual void stop();
-    virtual bool isRunning() const { return m_running; }
+    virtual void start() OVERRIDE;
+    virtual void stop() OVERRIDE;
+    virtual bool isRunning() const OVERRIDE { return m_running; }
 
     CAClockRef m_clock;
     bool m_running;
