Source/WebCore/platform/mac/PlatformClockCM.h
@@ -36,7 +36,7 @@ typedef struct OpaqueCMClock* CMClockRef;
 
 namespace WebCore {
 
-class PlatformClockCM : public Clock {
+class PlatformClockCM FINAL : public Clock {
 public:
     PlatformClockCM();
     PlatformClockCM(CMClockRef);
@@ -44,15 +44,15 @@ public:
 private:
     void initializeWithTimingSource(CMClockRef);
 
-    virtual void setCurrentTime(double);
-    virtual double currentTime() const;
+    virtual void setCurrentTime(double) OVERRIDE;
+    virtual double currentTime() const OVERRIDE;
 
-    virtual void setPlayRate(double);
-    virtual double playRate() const { return m_rate; }
+    virtual void setPlayRate(double) OVERRIDE;
+    virtual double playRate() const OVERRIDE { return m_rate; }
 
-    virtual void start();
-    virtual void stop();
-    virtual bool isRunning() const { return m_running; }
+    virtual void start() OVERRIDE;
+    virtual void stop() OVERRIDE;
+    virtual bool isRunning() const OVERRIDE { return m_running; }
 
     RetainPtr<CMTimebaseRef> m_timebase;
     double m_rate;
